[package]
name = "amqpr-codec"
version = "0.2.3"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tokio based amqp codec library mainly used by amqpr."
repository = "https://github.com/AtsukiTak/amqpr-codec"
keywords = ["amqp", "rabbitmq"]
categories = ["network-programming", "encoding"]

[dependencies]
tokio-io = "0.1"

bytes = "0.4"

error-chain = "0.11"
log = "0.3"
