[package]
name = "amqpr-codec"
version = "0.3.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Defining AMQP codec"
repository = "https://github.com/AtsukiTak/amqpr-codec"
keywords = ["amqp", "rabbitmq"]
categories = ["network-programming", "encoding"]
readme = "README.md"

[dependencies]
tokio-io = "0.1"

bytes = "0.4"

error-chain = "0.11"
log = "0.3"
